# pipfile-cli

./: .gitignore  MANIFEST.in  Pipfile  README.rst  setup.cfg  setup.py  tasks.py
src/pipfile_cli/: __main__.py  _click.py  sync.py
