[metadata]
name = pipfile_cli
description = Command line interface around Pipfile operations
url = https://github.com/uranusjr/pipfile_cli
author = Tzu-ping Chung
author_email = uranusjr@gmail.com
long_description = file: README.rst
license = ISC License
keywords =
    pipenv
    pipfile
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
python_requires = >= '3.5'
install_requires =
    click
    requirementslib

[options.entry_points]
console_scripts =
    pipfile=pipfile_cli.__main__:cli

[bdist_wheel]
universal = 1
